tests/suite/fail/generated/types/fail_sub_bool_string.ny
fn main() {
    let _ = true - "a" //~ ERROR Invalid operation on string
}
